--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
-    "typewriter-effect": "^2.22.0"
+    "typewriter-effect": "^2.22.0",
+    "vite-bundle-analyzer": "^1.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -41,7 +42,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "prettier": "3.5.3",
-    "tw-animate-css": "^1.3.4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
